fixed post meta  alignment

--- a/assets/sass/_theme/blocks/posts.sass
+++ b/assets/sass/_theme/blocks/posts.sass
@@ -38,26 +38,20 @@
                 @include icon(arrow-right, after, true)
             p[itemprop="articleBody"]
                 margin-top: $spacing1
-            .post-meta 
-                display: flex
-                flex-wrap: wrap
-                gap: half($spacing0)
-            .post-author
-                &::after
-                    content: '—'
-                p
-                    display: inline
-                    &::before
-                        display: none
-            .post-categories
-                margin-top: half($spacing0)
-                li
-                    display: inline-flex
-                    &:not(:last-child)::after
-                        content: ', '
+            .post-author 
+                p::before
+                    display: none
         @include media-breakpoint-down(desktop)
             .post + .post
                 margin-top: $spacing2
+            .post-meta
+                .post-author 
+                    display: inline-flex
+                    &::after
+                        content: '—'
+                        margin: 0 half($spacing0)
+                .post-categories
+                    display: flex
         @include media-breakpoint-up(desktop)
             .large
                 .post
@@ -65,16 +59,36 @@
                     gap: half($grid-gutter)
                     + .post
                         margin-top: $spacing2
+                    .post-meta
+                        display: inline
+                    .post-meta 
+                        > *
+                            display: inline
+                            &:not(:first-child)::before
+                                content: '—'
+                                margin-right: half($spacing0)
+                        > time
+                            display: inline-block
+                            margin-top: -2px
+                    .post-author
+                        p
+                            display: inline
+                        li
+                            margin-right: $spacing0
+                    .post-categories
+                        li
+                            display: inline-flex
+                            margin-right: $spacing0
+                            padding-bottom: 3px
+                            &:not(:last-child)::after
+                                content: ','
                             
         @include in-page-with-sidebar
             .large
                 .post
-                    @include media-breakpoint-down(xl)
-                        flex-direction: column
-                    @include media-breakpoint-up(xl)
-                        .media,
-                        .post-content
-                            width: calc(#{col(4, 8)} + #{half($grid-gutter)})
+                    .media,
+                    .post-content
+                        width: calc(#{col(4, 8)} + #{half($grid-gutter)})
         @include in-page-without-sidebar
             .large
                 .post
